[project]
name = "case-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["machine-learning", "pytorch", "finance", "ai", "transactions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "requests>=2.32.5",
    "torch>=2.0.0",
    "scikit-learn >= 1.0.0",

    #Visualization
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",

    #Data Processing
    "openpyxl>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "jupyter >= 1.0.0",
    "pytest >= 7.0.0",
    "black >= 22.0.0",
    "flake8 >= 4.0.0",
    "mypy >= 0.950",
]
viz = [
    "plotly >= 5.0.0",
    "tensorboard >= 2.8.0",
]
all = [
    "case-1[dev,viz]"
]

